website is deployed

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 
-CONNECTION_URL=mongodb+srv://Pratik:Pratik2303@cluster0.4gris.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+CONNECTION_URL=mongodb+srv://Pratik:Pratik2303@cluster0.4gris.mongodb.net/memories?retryWrites=true&w=majority
